<resources>
    <string name="app_name">dating-app-A3</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="or">OR</string>
    <string name="no_account">No account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="birthday">Birthday</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="biography">Biography</string>
    <string name="i_am">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_prefer">I prefer</string>
    <string name="save_profile">Save Profile</string>
    <string name="both">Both</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="help_center">Help Center</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="edit">Edit</string>
    <string name="i_love_you">I love you</string>
    <string name="biography_">Biography:</string>
    <string name="i_love_you_">I love you</string>
    <string name="_175_cm">175 cm</string>
    <string name="_175_cm_">175 cm</string>
    <string name="height">Height:</string>
    <string name="_01_01_2001">01-01-2001</string>
    <string name="birthday_">Birthday:</string>
    <string name="john_doe">John Doe</string>
    <string name="name_">Name:</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="default_web_client_id">151889160012-2j5slli51319h83fhiutkbrd50g6j81p.apps.googleusercontent.com</string>
</resources>