<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_bordeaux"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">



    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="sans-serif-medium"
        android:onClick="goToLogIn"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/or"

        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:onClick="goToRegister"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />


</LinearLayout>